# ws-branch

./: .dockerignore  .gitignore  1120004938-1.docx  CLAUDE.md  DATA_DICTIONARY.md  Dockerfile  Dockerfile.smoke  PNL_HighSpeed_Arch.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  analysis.md  analyze_alpha_v2.py  analyze_broker_scorecard.py  analyze_high_performers.py  analyze_predictive.py  broker_names.json  dev.md  docker-compose.yml  duckdb.md  etl.py  export_signals.py  generate_merge_map.py  generate_ranking_report.py  main.py  market_scan.py  pnl_engine.py  pyproject.toml  query_ranking.py  ref.md  run.sh  signal_report.py  sync_prices.py  tensor.py  證券商基本資料.xls  證券商結束營業資料.xls
.claude/hooks/: hypothesis-loop.sh
.github/workflows/: ci.yml  release.yml
archive/: analyze_alpha.py  analyze_alpha_v2.py  analyze_timing_alpha.py  analyze_timing_permutation.py  etl_v1.py  execution_alpha.py  models.py  pnl_engine_v1.py  price_repo.py  test_2026.py  test_metrics.py  test_models.py  test_repositories.py  test_returns.py  verify_refactor.py
broker_analytics/: __init__.py  __main__.py
broker_analytics/application/: __init__.py
broker_analytics/domain/: __init__.py  backtest.py  beta_analysis.py  churn.py  event_dedup.py  event_detection.py  event_persistence.py  fifo.py  large_trade.py  signal_strength.py  statistics.py  timing_alpha.py
broker_analytics/infrastructure/: __init__.py  bigquery.py  config.py
broker_analytics/interfaces/: __init__.py  cli.py
docs/: .gitignore  broker_mergers.md  data_integrity_report.md  harshreview.md  hypothesis_exploration_guide.md  hypothesis_research_report.qmd  information_fragmentation_alpha.md  information_fragmentation_alpha.qmd  quant_decision_framework.md  statistics.md  strength_analysis_checklist.md  threshold_analysis_summary.md
pnl_analytics/: __init__.py  __main__.py
scripts/: smoke_test.py
tests/: test_cli.py  test_domain.py  test_hypothesis.py  test_main.py  test_metrics.py  test_pnl_daily.py  test_refactor_baseline.py  test_repositories.py  test_returns.py  test_services.py
tmp/: export_broker_tx.py  gen_5d_xlsx.py  gen_xlsx.py  sharpe_analysis.py  sharpe_analysis_v2.py
(+84 files in other folders)
