[project]
name = "pnl-analytics"
version = "0.12.0"
description = "High-speed PNL computation for stock trading data"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "google-cloud-bigquery>=3.40.0",
    "xlsxwriter>=3.2.9",
    "xlrd>=2.0.2",
]

[project.scripts]
pnl = "pnl_analytics.interfaces.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pnl_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
