[project]
name = "broker-analytics"
version = "0.30.0"
description = "Broker behavior analysis from trade-level data"
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2024.1",
    "numpy>=2.0.0",
    "polars>=1.0.0",
    "python-dotenv>=1.0",
    "ws-bot-core",
    "ws-core",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
broker = "broker_analytics.interfaces.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broker_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
ws-bot-core = { git = "https://github.com/vikhuang/ws-bot-core" }
ws-core = { path = "../ws-core", editable = true }
